DATE       AUTHOR      CHANGE
---------- ----------- --------------------------------------------------------
2005-02-10 patrickh    Extended org.vrjuggler.tweek.beans.FileLoader to allow
                       save-all operations and to allow for testing for unsaved
                       changes.  Added the capability for Beans to notify the
                       Tweek Java GUI about file operations (open, close, save,
                       etc.) that they perform themselves.
                       NEW VERSION 0.92.3
2005-02-08 patrickh    Added org.vrjuggler.tweek.TweekCore.getMessageDocument()
                       for easy access to the Tweek Java GUI's informational
                       message document.
                       NEW VERSION: 0.92.2
2005-01-23 patrickh    Added org.vrjuggler.tweek.beans.HelpProvider, an
                       interface used by the Tweek Java GUI for Panel Beans to
                       indicate that they can provide help to users.
                       NEW VERSION: 0.92.1

[1.0 Beta 2 released - 1.18.2005]==============================================
2005-01-18 patrickh    NEW VERSION: 0.92.0

[1.0 Beta 1 released - 12.24.2004]=============================================
2004-12-22 patrickh    NEW VERSION: 0.91.0
2004-12-22 patrickh    EnvironmentService.getenv() now falls back on
                       System.getProperty() as a last resort attempt to give
                       back a non-default value.
                       NEW VERSION: 0.21.1
2004-12-08 patrickh    Allow the use of TAO as the C++ CORBA implementation.
                       User code must now include tweek/idl/Subject.h rather
                       than tweek/CORBA/Subject.h.
                       NEW VERSION: 0.21.0
2004-12-06 patrickh    Added an overload of EnvironmentService.getenv() that
                       allows users to specify a default value to be returned
                       if the environment variable is not found.