@@ -34,41 +34,35 @@
  *
  *************** <auto-copyright.pl END do not edit this line> ***************/
 
-package org.vrjuggler.tweek.event;
-
-import java.util.EventObject;
-import org.vrjuggler.tweek.beans.FileLoader;
+package org.vrjuggler.tweek.beans;
 
 
 /**
- * Event generated by a Tweek Bean when a file manipulation activity has
- * taken place.
+ * The interface used to identify Beans as being a user of the Java clipboard
+ * for cut/copy/paste support.  This interface must be implemented by the Tweek
+ * Panel Bean that will be loaded and instantiated by the Tweek Java GUI.  The
+ * Tweek Java GUI only learns of CliboardUser implementations when the Panel
+ * Bean is focused.
  *
- * @see FileActionListener
+ * @see java.awt.datatransfer.Clipboard
  *
- * @since 0.92.3
+ * @since 0.92.4
  */
-public class FileActionEvent extends EventObject
+public interface ClipboardUser
 {
-   public FileActionEvent(FileLoader source)
-   {
-      super(source);
-      fileLoader = source;
-   }
+   /**
+    * Invoked when the user wants to remove a selection and copy it to the
+    * clipboard.
+    */
+   public void cutRequested();
 
    /**
-    * @since 0.92.4
+    * Invoked when the user wants to copy a selection to the clipboard.
     */
-   public FileActionEvent(Object source, FileLoader loader)
-   {
-      super(source);
-      fileLoader = loader;
-   }
+   public void copyRequested();
 
-   public FileLoader getFileLoader()
-   {
-      return fileLoader;
-   }
-
-   private FileLoader fileLoader = null;
+   /**
+    * Invoked when the user wants to paste the contents of the clipboard.
+    */
+   public void pasteRequested();
 }
